more work on characteristic limiting and dissertation

--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -4,14 +4,14 @@
 
 \indent
 First and foremost, I would like to thank my advisor, Dr. Jean Ragusa,
-for his years of guidance, wisdom, and patience. I would also like to his
-recently graduated student Dr. Marco Delchini for his time, effort, and
+for his years of guidance, wisdom, patience, and expertise. I would also like to
+thank Dr. Marco Delchini for his time, effort, and
 knowledge in the development of methods for the shallow water equations.
 
-I would like to thank Dr. Jean-Luc Guermond for all of his time working
-with us to develop effective numerical methods for conservation laws.
-I would also like to thank Dr. Bojan Popov for his input in these
-fruitful discussions.
+I would like to thank Drs. Jean-Luc Guermond and Bojan Popov for their
+time and expertise in entropy-based artificial dissipation and
+conservation law methodology. Their recent work on discrete maximum principle-
+preserving and invariant domain methods was the foundation of this dissertation.
 
 I would like to thank all of those who have contributed to the
 development of the \texttt{deal.II} finite element library, which has been
@@ -20,15 +20,15 @@ dissertation. I would especially like to thank Drs. Wolfgang Bangerth
 and Bruno Turcksin, who have quickly answered many questions I had regarding
 the use of \texttt{deal.II}.
 
-I would like to thank all of those who have contributed to the development
-of FCT methods over the years, whose works I have thoroughly read in
-preparation for this research. I would like to thank Dr. Dmitri Kuzmin
+I would like to thank those who have contributed to the development
+of FCT methods over the years, whose works were essential in the development
+of the methodology used in this research. I would like to thank Dr. Dmitri Kuzmin
 for his responses in my questions about FCT.
 
-\hl{NOTE: Is this where the following should go? Can it be better worded?}
-I would lastly like to thank those who funded this research;
-this research was funded by an NEUP (Nuclear Energy University Programs)
-fellowship from the U.S. Department of Energy and also by the \texttt{MOOSE}
-project at Idaho National Laboratory.
+I would like to thank the U.S. Department of Energy for funding
+this research with the Nuclear Energy University Programs (NEUP)
+fellowship.
+
+Lastly, I would like to thank my friends and family for their love and support.
 
 \pagebreak{}
