--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -34,7 +34,7 @@
 \newcommand{\nnodes}{N_\text{node}}
 \newcommand{\dofindex}{j}
 \newcommand{\nodeindex}{k}
-\newcommand{\componentindex}{m}
+\newcommand{\componentindex}{p}
 \newcommand{\transpose}{^{\text{T}}}
 
 % schemes
