--- a/doc/dissertation/dedication.tex
+++ b/doc/dissertation/dedication.tex
@@ -2,8 +2,9 @@
 %%                           DEDICATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{DEDICATION}
-\addcontentsline{toc}{chapter}{DEDICATION}  % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
+% Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
+\addcontentsline{toc}{chapter}{DEDICATION}  
 
-\indent To Frodo Baggins
+\indent To Siobh\'{a}n
 
 \pagebreak{}
