--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -40,8 +40,6 @@
 % Document
 %===============================================================================
 \begin{document}
-
-    Dissertation Proposal: 
    
 \renewcommand{\tamumanuscripttitle}{Application of the Entropy Viscosity Method
   and the Flux-Corrected Transport Algorithm to Scalar Transport Equations and
@@ -60,7 +58,7 @@
 
 \include{titlepage}
 \include{abstract}
-%\include{dedication}
+\include{dedication}
 \include{acknowledgements}
 \include{nomenclature}
 \include{lists}
