started working on crooked pipe, code in transitional state

--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -106,6 +106,18 @@
   Organization             = {Electricit de France, Department Laboratoire National d'Hydraulique, Groupe Hydraulique Fluviale}
 }
 
+@TechReport{gruziani2000,
+  Title                    = {The crooked pipe test problem},
+  Author                   = {F. Gruziani and J. LeBlanc},
+  Institution              = {University of California Radiation Laboratory},
+  Year                     = {2000},
+  Number                   = {UCRL-MI-143393},
+  Type                     = {report},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.02.23}
+}
+
 @Article{guermond_firstorder,
   Title                    = {A Maximum-Principle Preserving $C^0$ Finite Element Method for Scalar Conservation Equations},
   Author                   = {Jean-Luc Guermond and Murtazo Nazarov},
@@ -221,6 +233,19 @@
   Author                   = {Randall J. LeVeque},
   Publisher                = {Cambridge University Press},
   Year                     = {2002}
+}
+
+@Article{long2014,
+  Title                    = {The iterative thermal emission method: A more implicit modification of IMC},
+  Author                   = {A. R. Long and N. A. Gentile and T. S. Palmer},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {2014},
+  Pages                    = {228--247},
+  Volume                   = {277},
+
+  Doi                      = {10.1016/j.jcp.2014.08.017},
+  Owner                    = {joshua},
+  Timestamp                = {2016.02.23}
 }
 
 @Article{panov1994,
