--- a/doc/presentations/LLNL/results/normal_void_to_absorber_2d/latex/compare.tex
+++ b/doc/presentations/LLNL/results/normal_void_to_absorber_2d/latex/compare.tex
@@ -7,7 +7,7 @@
 % Input
 %------------------------------------------------------------------------------
 % path to figures directory
-\newcommand{\FiguresDir}{../images}
+\newcommand{\FiguresDirnew}{./results/normal_void_to_absorber_2d/images}
 
 % time discretization: "FE" or "SSPRK33"
 \newcommand{\Discretization}{FE}
