--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -92,6 +92,7 @@
 %===============================================================================
 \subsection{Nonlinear Iteration\label{sec:nonlinear_iteration}}
   \input{content/implementation/nonlinear_iteration.tex}
-\subsection{FCT Nonlinear Iteration\label{sec:nonlinear_iteration_fct}}
+\subsection{Cumulative Antidiffusion FCT Nonlinear Iteration Scheme
+  \label{sec:nonlinear_iteration_fct}}
   \input{content/implementation/nonlinear_iteration_fct.tex}
 
